@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1938 2004/07/14 22:24:40 jlam Exp $
+$NetBSD: TODO,v 1.1939 2004/07/16 16:50:47 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -379,7 +379,6 @@ Suggested package updates
 	o tct-1.14
 	o teapop-0.3.8
 	o texi2html-1.70
-	o thy-0.9.3 [pkg/25318]
 	o tkdesk-2.0
 	o tkman-2.2
 	o tripwire-2.3.1 [see also pkg/22362]
