@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/04/01 05:19:03 xtraeme Exp $
+# $NetBSD: Makefile,v 1.2 2004/07/16 16:50:47 xtraeme Exp $
 #
 
-DISTNAME=		thy-0.8.10
+DISTNAME=		thy-0.9.3
 CATEGORIES=		www
-MASTER_SITES=		ftp://bonehunter.rulez.org/pub/thy/devel/
+MASTER_SITES=		ftp://bonehunter.rulez.org/pub/thy/stable/
+EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		algernon@bonehunter.rulez.org
 HOMEPAGE=		http://bonehunter.rulez.org/Thy.phtml
